# custom-warnings

./: .gitignore  README.md  main.py  pyproject.toml
custom_warnings/: __init__.py  custom_warnings.py
